################################################################################
# Check packages
################################################################################

################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	server.cpp
)

################################################################################
# Targets
################################################################################

add_executable(${PROJECT_NAME} ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(${PROJECT_NAME}
	oc
	octbstack
	connectivity_abstraction
)
